--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+Pan Language/.vs/Pan Language/v15/.suo
+Pan Language/Pan Language/bin/Debug/Pan Language.exe
+Pan Language/Pan Language/obj/Debug/Pan Language.exe
