Changed print statement and symbol matching

--- a/Pan Language/Pan Language/Pan Language.csproj
+++ b/Pan Language/Pan Language/Pan Language.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Output only|AnyCPU'">
+    <OutputPath>bin\Output only\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
