--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.suo
+Pan Language/Pan Language/bin/Debug/Pan Language.exe
+*.pdb
+Pan Language/Pan Language/bin/Output only/Pan Language.exe.config
+*.exe
+Pan Language/Pan Language/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+*.txt
+Pan Language/Pan Language/obj/Debug/Pan Language.exe
+*.pdb
+Pan Language/Pan Language/obj/Output only/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+*.cs
