Added: minor changes in parsing
removed need for ";"
removed variable class holding lists

--- a/Pan Language/Pan Language/Pan Language.csproj
+++ b/Pan Language/Pan Language/Pan Language.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Class.cs" />
     <Compile Include="CodeGenerator.cs" />
     <Compile Include="CompilerException.cs" />
+    <Compile Include="Global.cs" />
     <Compile Include="ICodeGenerator.cs" />
     <Compile Include="Lexer.cs" />
     <Compile Include="Method.cs" />
