--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ Pan Language/Pan Language/bin/Output only/Pan Language.vshost.exe.manifest
 *.txt
 *.cache
 Pan Language/Pan Language/obj/Debug/Pan Language.csprojResolveAssemblyReference.cache
+Pan Language/.vs/Pan Language/v15/.suo
