--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Pan Language/Pan Language/bin/Debug/Pan Language.exe
 *.pdb
 Pan Language/Pan Language/obj/Debug/Pan Language.exe
 *.pdb
+Pan Language/.vs/Pan Language/v14/.suo
