--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,6 @@ Pan Language/Pan Language/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cac
 Pan Language/Pan Language/obj/Debug/Pan Language.exe
 *.pdb
 Pan Language/Pan Language/obj/Output only/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-*.cs
 Pan Language/.vs/Pan Language/v15/.suo
 Pan Language/Pan Language/bin/Debug/Pan Language.exe
 Pan Language/Pan Language/obj/Debug/Pan Language.exe
@@ -75,3 +74,4 @@ Pan Language/Pan Language/bin/Debug/Pan Language.exe
 Pan Language/Pan Language/obj/Debug/Pan Language.exe
 *.pdb
 Pan Language/.vs/Pan Language/v14/.suo
+Pan Language/Pan Language/obj/Output only/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
